--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Bits of Everything</title>
+  <title>About - Byts of Everything</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
   <section class="about">
     <div class="container about-box">
       <p>
-        At Bits of Everything, we are passionate about turning ideas into efficient software solutions. 
+        At Byts of Everything, we are passionate about turning ideas into efficient software solutions. 
         With a focus on quality, reliability, and innovation, we provide a wide range of services from web applications 
         to custom software automation. Our mission is to empower businesses and individuals by delivering cutting-edge 
         technology solutions that exceed expectations. Every project we undertake is handled with care, attention to detail, 
@@ -39,7 +39,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Bits of Everything. All rights reserved.</p>
+      <p>&copy; 2025 Byts of Everything. All rights reserved.</p>
     </div>
   </footer>
 </body>
