--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Bits of Everything</title>
+  <title>Projects - Byts of Everything</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,7 +50,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Bits of Everything. All rights reserved.</p>
+      <p>&copy; 2025 Byts of Everything. All rights reserved.</p>
     </div>
   </footer>
 
