--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bits of Everything</title>
+  <title>Byts of Everything</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -58,7 +58,7 @@
   <!-- FOOTER -->
 <footer>
   <div class="container">
-    <p>&copy; 2025 Bits of Everything. All rights reserved.</p>
+    <p>&copy; 2025 Byts of Everything. All rights reserved.</p>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
