--- a/services/custom-services.html
+++ b/services/custom-services.html
@@ -24,12 +24,47 @@
   <div class="header-space"></div>
 
   <!-- Custom Services Section -->
-  <section class="custom-services">
-    <div class="container">
-   
-      <p>We provide tailored software solutions to meet your unique requirements. From concept to deployment, our team works closely with you to deliver exceptional results.</p>
+  <section class="custom-services-section">
+    <br></br>
+    <br></br><br></br><br></br>
+
+    
+
+      <div class="product-grid">
+
+        <!-- Code Rescue Mission -->
+        <div class="product-card" onclick="location.href='custom-rescue.html'">
+          <h3>🚀 Code Rescue Mission</h3>
+          <p>Emergency bug fixes, legacy code refactoring, and technical debt cleanup. We'll save your sinking ship!</p>
+          <p class="price">Starting at $500</p>
+        </div>
+
+        <!-- MVP Launch Pad -->
+        <div class="product-card" onclick="location.href='custom-mvp.html'">
+          <h3>⚡ MVP Launch Pad</h3>
+          <p>Rapid MVP development from idea to launch in 4-8 weeks. Perfect for startups and entrepreneurs testing the waters.</p>
+          <p class="price">Starting at $3,500</p>
+        </div>
+
+        <!-- AI Integration Wizard -->
+        <div class="product-card" onclick="location.href='custom-ai.html'">
+          <h3>🤖 AI Integration Wizard</h3>
+          <p>Add AI superpowers to your app! ChatGPT integration, ML models, intelligent automation, and predictive analytics.</p>
+          <p class="price">Starting at $2,500</p>
+        </div>
+
+        <!-- DevOps Transformation -->
+        <div class="product-card" onclick="location.href='custom-devops.html'">
+          <h3>⚙️ DevOps Transformation</h3>
+          <p>Complete CI/CD pipeline setup, cloud migration, containerization, monitoring, and infrastructure as code.</p>
+          <p class="price">Starting at $4,000</p>
+        </div>
+
+      </div>
     </div>
   </section>
+
+  <br></br><br></br><br></br><br></br>
 
   <!-- Footer -->
   <footer>
