--- a/services/enterprise-api.html
+++ b/services/enterprise-api.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Enterprise-Level API Integration - Byts of Everything</title>
   <link rel="stylesheet" href="../style.css">
+  <script src="../form-handler.js"></script>
   <style>
     .custom-button {
       background-color: #4CAF50;
@@ -66,7 +67,7 @@
     <div class="container">
       <br>        </br>
       <br>        </br>
-      <form action="/submit-enterprise-api" method="POST">
+      <form action="https://formspree.io/f/mvgjbnyp" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required><br>        </br>
 
