--- a/services/integration-advanced.html
+++ b/services/integration-advanced.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Complex API Integration - Byts of Everything</title>
+  <title>Advanced Integration Testing - Byts of Everything</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     .custom-button {
@@ -61,7 +61,7 @@
   <div class="header-space"></div>
   <div class="header-space"></div>
 
-  <!-- Complex API Integration Form Section -->
+  <!-- Advanced Integration Testing Form Section -->
   <section class="service-form">
     <div class="container">
       <br>        </br>
@@ -73,8 +73,8 @@
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required><br>        </br>
 
-        <label for="description">API Description:</label>
-        <textarea id="description" name="description" rows="10" required></textarea><br>        </br>
+        <label for="description">Project Description:</label>
+        <textarea id="description" name="description" rows="10" placeholder="Describe your advanced integration testing needs (microservices, message queues, event-driven architecture, performance testing)" required></textarea><br>        </br>
 
         <label for="deadline">Preferred Deadline:</label>
         <input type="date" id="deadline" name="deadline"><br>        </br>
