--- a/services/integration-testing.html
+++ b/services/integration-testing.html
@@ -23,13 +23,48 @@
 
   <div class="header-space"></div>
 
-  <!-- Integration Testing Service Section -->
-  <section class="integration-testing">
-    <div class="container">
-      <h1>Integration Testing</h1>
-      <p>Our integration testing services validate the interaction between different software modules, ensuring smooth and error-free operation of your system as a whole.</p>
+  <!-- Integration Testing Services Section -->
+  <section class="integration-testing-services">
+    <br></br>
+    <br></br><br></br><br></br>
+
+    
+
+      <div class="product-grid">
+
+        <!-- Basic Integration Testing -->
+        <div class="product-card" onclick="location.href='integration-basic.html'">
+          <h3>Basic Integration Testing</h3>
+          <p>Module-to-module integration testing for small applications with simple data flows and API connections.</p>
+          <p class="price">Starting at $300</p>
+        </div>
+
+        <!-- Intermediate Integration Testing -->
+        <div class="product-card" onclick="location.href='integration-intermediate.html'">
+          <h3>Intermediate Integration Testing</h3>
+          <p>Multi-layer integration testing including database, API, and third-party service validation with automated test suites.</p>
+          <p class="price">Starting at $1,000</p>
+        </div>
+
+        <!-- Advanced Integration Testing -->
+        <div class="product-card" onclick="location.href='integration-advanced.html'">
+          <h3>Advanced Integration Testing</h3>
+          <p>Complex system integration with microservices, message queues, event-driven architecture, and performance testing.</p>
+          <p class="price">Starting at $3,500</p>
+        </div>
+
+        <!-- Enterprise Integration Testing -->
+        <div class="product-card" onclick="location.href='integration-enterprise.html'">
+          <h3>Enterprise-Level Integration Testing</h3>
+          <p>End-to-end integration testing framework, CI/CD pipeline integration, security testing, and compliance validation.</p>
+          <p class="price">Starting at $15,000</p>
+        </div>
+
+      </div>
     </div>
   </section>
+
+  <br></br><br></br><br></br><br></br>
 
   <!-- Footer -->
   <footer>
