--- a/services/simple-api.html
+++ b/services/simple-api.html
@@ -66,21 +66,23 @@
     <div class="container">
       <br>        </br>
       <br>        </br>
-      <form action="/submit-simple-api" method="POST">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required><br>        </br>
+     <form action="https://formspree.io/f/mvgjbnyp" method="POST">
+        
+  <label for="name">Your Name:</label>
+  <input type="text" id="name" name="name" required><br></br>
 
-        <label for="email">Your Email:</label>
-        <input type="email" id="email" name="email" required><br>        </br>
+  <label for="email">Your Email:</label>
+  <input type="email" id="email" name="email" required><br></br>
 
-        <label for="description">API Description:</label>
-        <textarea id="description" name="description" rows="10" required></textarea><br>        </br>
+  <label for="description">API Description:</label>
+  <textarea id="description" name="description" rows="10" required></textarea><br></br>
 
-        <label for="deadline">Preferred Deadline:</label>
-        <input type="date" id="deadline" name="deadline"><br>        </br>
+  <label for="deadline">Preferred Deadline:</label>
+  <input type="date" id="deadline" name="deadline"><br></br>
 
-        <button type="submit" class="custom-button">Submit</button>
-      </form>
+  <button type="submit" class="custom-button">Submit</button>
+
+</form>
 
       <a href="https://calendly.com/moussamb1901/30min" class="schedule-meeting" target="_blank">Schedule an Online Meeting</a>
     </div>
