--- a/services/software-testing.html
+++ b/services/software-testing.html
@@ -23,13 +23,48 @@
 
   <div class="header-space"></div>
 
-  <!-- Software Testing Service Section -->
-  <section class="software-testing">
-    <div class="container">
-      <h1>Software Testing</h1>
-      <p>We offer end-to-end software testing services to ensure your applications meet the highest standards of quality, functionality, and performance.</p>
+  <!-- Software Testing Services Section -->
+  <section class="software-testing-services">
+    <br></br>
+    <br></br><br></br><br></br>
+
+    
+
+      <div class="product-grid">
+
+        <!-- Basic Software Testing -->
+        <div class="product-card" onclick="location.href='software-basic.html'">
+          <h3>Basic Software Testing</h3>
+          <p>Essential functional and manual testing for small applications with basic test case creation and bug reporting.</p>
+          <p class="price">Starting at $250</p>
+        </div>
+
+        <!-- Intermediate Software Testing -->
+        <div class="product-card" onclick="location.href='software-intermediate.html'">
+          <h3>Intermediate Software Testing</h3>
+          <p>Comprehensive testing including functional, regression, usability, and compatibility testing with detailed documentation.</p>
+          <p class="price">Starting at $800</p>
+        </div>
+
+        <!-- Advanced Software Testing -->
+        <div class="product-card" onclick="location.href='software-advanced.html'">
+          <h3>Advanced Software Testing</h3>
+          <p>Full-cycle QA services with automation, performance, security testing, and continuous integration support.</p>
+          <p class="price">Starting at $2,800</p>
+        </div>
+
+        <!-- Enterprise Software Testing -->
+        <div class="product-card" onclick="location.href='software-enterprise.html'">
+          <h3>Enterprise-Level Software Testing</h3>
+          <p>Complete QA solution with dedicated testing teams, test management, compliance validation, and 24/7 support.</p>
+          <p class="price">Starting at $12,000</p>
+        </div>
+
+      </div>
     </div>
   </section>
+
+  <br></br><br></br><br></br><br></br>
 
   <!-- Footer -->
   <footer>
