--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </section>
 
   <script src="script.js"></script>
+  <script src="form-handler.js"></script>
   <!-- FOOTER -->
 <footer>
   <div class="container">
