--- a/services/custom-rescue.html
+++ b/services/custom-rescue.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Complex API Integration - Byts of Everything</title>
+  <title>Code Rescue Mission - Byts of Everything</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     .custom-button {
@@ -61,7 +61,7 @@
   <div class="header-space"></div>
   <div class="header-space"></div>
 
-  <!-- Complex API Integration Form Section -->
+  <!-- Code Rescue Mission Form Section -->
   <section class="service-form">
     <div class="container">
       <br>        </br>
@@ -73,16 +73,25 @@
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required><br>        </br>
 
-        <label for="description">API Description:</label>
-        <textarea id="description" name="description" rows="10" required></textarea><br>        </br>
+        <label for="description">What's the Emergency?</label>
+        <textarea id="description" name="description" rows="10" placeholder="Describe your code crisis: critical bugs, legacy code nightmares, technical debt, performance issues, or security vulnerabilities. We're here to help!" required></textarea><br>        </br>
+
+        <label for="urgency">Urgency Level:</label>
+        <select id="urgency" name="urgency" required>
+          <option value="">Select urgency...</option>
+          <option value="critical">🔥 Critical - Production is down!</option>
+          <option value="high">⚠️ High - Major issues affecting users</option>
+          <option value="medium">📋 Medium - Needs attention soon</option>
+          <option value="low">📝 Low - Planning ahead</option>
+        </select><br>        </br>
 
         <label for="deadline">Preferred Deadline:</label>
         <input type="date" id="deadline" name="deadline"><br>        </br>
 
-        <button type="submit" class="custom-button">Submit</button>
+        <button type="submit" class="custom-button">Send SOS Signal</button>
       </form>
 
-      <a href="https://calendly.com/moussamb1901/30min" class="schedule-meeting" target="_blank">Schedule an Online Meeting</a>
+      <a href="https://calendly.com/moussamb1901/30min" class="schedule-meeting" target="_blank">Schedule Emergency Consultation</a>
     </div>
   </section>
 
