--- a/services/desktop-application.html
+++ b/services/desktop-application.html
@@ -65,7 +65,7 @@
     <div class="container">
       <br>        </br>
       <br>        </br>
-      <form action="/submit-desktop-application" method="POST">
+      <form action="https://formspree.io/f/mvgjbnyp" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required><br>        </br>
 
