--- a/services/software-basic.html
+++ b/services/software-basic.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Complex API Integration - Byts of Everything</title>
+  <title>Basic Software Testing - Byts of Everything</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     .custom-button {
@@ -61,20 +61,20 @@
   <div class="header-space"></div>
   <div class="header-space"></div>
 
-  <!-- Complex API Integration Form Section -->
+  <!-- Basic Software Testing Form Section -->
   <section class="service-form">
     <div class="container">
       <br>        </br>
       <br>        </br>
-      <form action="https://formspree.io/f/mvgjbnyp" method="POST">
+      <form action="/submit-basic-software-testing" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required><br>        </br>
 
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required><br>        </br>
 
-        <label for="description">API Description:</label>
-        <textarea id="description" name="description" rows="10" required></textarea><br>        </br>
+        <label for="description">Project Description:</label>
+        <textarea id="description" name="description" rows="10" placeholder="Describe your software testing needs (functional testing, manual testing, basic test cases, bug reporting)" required></textarea><br>        </br>
 
         <label for="deadline">Preferred Deadline:</label>
         <input type="date" id="deadline" name="deadline"><br>        </br>
