--- a/services/unit-testing.html
+++ b/services/unit-testing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unit Testing - Byts of Everything</title>
+  <title>Unit Testing Services - Byts of Everything</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -23,13 +23,48 @@
 
   <div class="header-space"></div>
 
-  <!-- Unit Testing Service Section -->
-  <section class="unit-testing">
-    <div class="container">
-      <h1>Unit Testing</h1>
-      <p>We provide comprehensive unit testing services to ensure the reliability and quality of your software components, minimizing bugs and improving maintainability.</p>
+  <!-- Unit Testing Services Section -->
+  <section class="unit-testing-services">
+    <br></br>
+    <br></br><br></br><br></br>
+
+    
+
+      <div class="product-grid">
+
+        <!-- Basic Unit Testing -->
+        <div class="product-card" onclick="location.href='unit-basic.html'">
+          <h3>Basic Unit Testing</h3>
+          <p>Simple test suites for small codebases, covering isolated functions with tools like PyTest, JUnit, or Jest.</p>
+          <p class="price">Starting at $150</p>
+        </div>
+
+        <!-- Intermediate Unit Testing -->
+        <div class="product-card" onclick="location.href='unit-intermediate.html'">
+          <h3>Intermediate Unit Testing</h3>
+          <p>Test coverage for multi-module applications, mocking dependencies, and integrating CI test pipelines.</p>
+          <p class="price">Starting at $500</p>
+        </div>
+
+        <!-- Advanced Unit Testing -->
+        <div class="product-card" onclick="location.href='unit-advanced.html'">
+          <h3>Advanced Unit Testing</h3>
+          <p>Large-scale test suites, high-coverage refactoring, test-driven development (TDD), and performance-focused tests.</p>
+          <p class="price">Starting at $2,000</p>
+        </div>
+
+        <!-- Enterprise Testing -->
+        <div class="product-card" onclick="location.href='unit-enterprise.html'">
+          <h3>Enterprise-Level Testing</h3>
+          <p>Complete test architecture, CI/CD automation, security testing layers, and compliance-standard coverage.</p>
+          <p class="price">Starting at $10,000</p>
+        </div>
+
+      </div>
     </div>
   </section>
+
+  <br></br><br></br><br></br><br></br>
 
   <!-- Footer -->
   <footer>
