--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section class="services">
     <h2>Our Services</h2>
 
-    <div class="service-grid">
+    <div class="service-grid"> 
 
       <div class="service-card" onclick="location.href='services/web-application.html'"> Applications</div>
       <div class="service-card" onclick="location.href='services/api-integration.html'">API Integration</div>
@@ -63,9 +63,9 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="projects/projects.html">Projects</a></li>
+        <li><a href="about/about.html">About</a></li>
+        <li><a href="contact/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
